--- a/views/home.slim
+++ b/views/home.slim
@@ -1,6 +1,5 @@
-h1 Welcome to ConfigShare
-p This site allows you to store your development and testing configuration files to 
-  share with teammates. Please avoid sharing production configuration at this point.
+h1 Welcome to Totodile
+p This site allows you anonymously to create posting .
 
-p 
+p
   a href='/account/login' login to start!
