--- a/views/account.slim
+++ b/views/account.slim
@@ -2,9 +2,9 @@ h1 User Account
 table
   tr
     td Username:
-    td 
-      == @current_account['username']
+    td
+      == @current_account['name']
   tr
     td Email:
-    td 
+    td
       == @current_account['email']
