--- a/views/register.slim
+++ b/views/register.slim
@@ -1,15 +1,9 @@
 h2 Create An Account
-form action='/register' method='post' id='user-form'
+form action='/account/register' method='post' id='user-form'
   label for='name' Username:
   input type='text' name='name' id='name_input'
   br
   label for='email' Email:
   input type='text' name='email' id='email_input'
-  br
-  label for='password' Password:
-  input type='password' name='password' id='password_input'
-  br
-  label for='passowrd' Re-enter Password:
-  input type='password' name='password_confirm' id='password_confirm_input'
   br
   input type='submit' id='registration-form-submit' class='submit' value='submit'
