fix error of login

--- a/views/login.slim
+++ b/views/login.slim
@@ -1,7 +1,7 @@
-p 
+p
   form method='post' action='/account/login' id='form-login'
-    label for='username' Username
-    input type='text' name='username' id='input-username'
+    label for='name' Username
+    input type='text' name='name' id='input-name'
     br
     label for='password' Password
     input type='password' name='password' id='input-password'
