--- a/views/flash_bar.slim
+++ b/views/flash_bar.slim
@@ -1,6 +1,6 @@
 - if flash[:error]
-  div class='flash error'
+  div class="alert alert-dismissible alert-danger"
     = flash[:error]
 - if flash[:notice]
-  div class='flash notice'
+  div class="alert alert-dismissible alert-success"
     = flash[:notice]
