--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,12 +2,15 @@ doctype html
 html
   head
     title Totodile
+    / Bootstrap CSS and theme (Darkly)
+    link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-S7YMK1xjUjSpEnF4P8hPUcgjXYLZKK3fQW1j5ObLSl787II9p8RO9XUGehRmKsxd" crossorigin="anonymous"
     link rel='stylesheet' href='/style.css'
   body
-    header
-      h1 Totodile
-    nav
-      == slim :nav
+    / JQuery and Bootstrap JS
+    script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"
+    script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"
+
+    == slim :nav
     section
       == slim :flash_bar
       == yield
