--- a/views/nav.slim
+++ b/views/nav.slim
@@ -1,16 +1,31 @@
-a href='/'
-  == 'HOME'
-= ' | '
-- if @current_account
-  = "#{@current_account['name']} | "
-  a href="/account/#{@current_account['name']}" account
-  = ' | '
-  a href="/account/#{@current_account['name']}/postings" postings 
-  = ' | '
-  a href='/account/logout' logout
-- else
-  a href='/account/login'
-    = 'login'
-  = ' | '
-  a href='/account/register'
-    = 'register'
+nav class="navbar navbar-default"
+  div class="container-fluid"
+    div class="navbar-header"
+      button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+        span class="sr-only" Toggle navigation
+        span class="icon-bar"
+        span class="icon-bar"
+        span class="icon-bar"
+      a class="navbar-brand" rel="home" href="/" title="Totodile secret message"
+        img alt="Totodile app" src="/totodile.png" style="max-width:35px; margin-top: -7px;"
+      a class="navbar-brand" href="/" Totodile
+    div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"
+      ul class="nav navbar-nav"
+        - if @current_account
+          li
+            a href="/account/#{@current_account['name']}/postings" postings
+          li class="dropdown"
+            a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"
+              = "#{@current_account['name']}"
+              span class="caret"
+            ul class="dropdown-menu" role="menu"
+              li
+                a href="/account/#{@current_account['name']}" account
+              li
+                a href='/account/logout' logout
+        - else
+          li
+            a href='/account/login' login
+          li
+            a href='/account/register' register
+
