--- a/views/postings_all.slim
+++ b/views/postings_all.slim
@@ -1,17 +1,20 @@
-div 
-  div 
+div class="container"
+  div class="row"
     h3 All postingects
-  div 
+  div class="row"
     button + New Posting
-table
-  thead
-    tr
-      th Owner
-      th Content
-  tbody
-    - @postings.each do |posting|
-      tr
-        td #{posting[:owner_name]}
-        td #{posting[:content]}
+  div class="row"
+    table class="table table-striped table-hover "
+      thead
+        tr
+          th Owner
+          th Content
+          th Created At
+      tbody
+        - @postings.each do |posting|
+          tr
+            td #{posting[:owner_name]}
+            td #{posting[:content]}
+            td #{posting[:created_at]}
 
 
