--- a/views/postings_all.slim
+++ b/views/postings_all.slim
@@ -1,8 +1,8 @@
 div class="container"
   div class="row"
-    h3 All postingects
+    h3 All postings
   div class="row"
-    button + New Posting
+    button class="btn btn-success btn-sm" + New Posting
   div class="row"
     table class="table table-striped table-hover "
       thead
