--- a/views/home.slim
+++ b/views/home.slim
@@ -1,21 +1,20 @@
-div class="container"
-  div class="row"
-    h1 Welcome to Totodile
-    p This site allows you anonymously to create posting .
-  div class="row"
-    - if @current_account
-      table class="table table-striped table-hover "
-        thead
+div class="row"
+  h1 Welcome to Totodile
+  p class="text-success" This site allows you anonymously to create posting .
+div class="row"
+  - if @current_account
+    table class="table table-striped table-hover "
+      thead
+        tr
+          th Owner
+          th Content
+          th Created At
+      tbody
+        - @postings.each do |posting|
           tr
-            th Owner
-            th Content
-            th Created At
-        tbody
-          - @postings.each do |posting|
-            tr
-              td #{posting[:owner_name]}
-              td #{posting[:content]}
-              td #{posting[:created_at]}
-    - else
-      p
-        a href='/account/login' login to start!
+            td #{posting[:owner_name]}
+            td #{posting[:content]}
+            td #{posting[:created_at]}
+  - else
+    p
+      a href='/account/login' login to start!
