--- a/views/postings_all.slim
+++ b/views/postings_all.slim
@@ -1,20 +1,33 @@
-div class="container"
-  div class="row"
-    h3 All postings
-  div class="row"
-    button class="btn btn-success btn-sm" + New Posting
-  div class="row"
-    table class="table table-striped table-hover "
-      thead
+div class="row" style="margin-bottom: 10px"
+  h3 All postings
+div class="row" style="margin-bottom: 10px"
+  button type="button" class="btn btn-success" data-toggle="modal" data-target="#newPostingModal" + New Posting
+div class="row"
+  table class="table table-striped table-hover "
+    thead
+      tr
+        th Owner
+        th Content
+        th Created At
+    tbody
+      - @postings.each do |posting|
         tr
-          th Owner
-          th Content
-          th Created At
-      tbody
-        - @postings.each do |posting|
-          tr
-            td #{posting[:owner_name]}
-            td #{posting[:content]}
-            td #{posting[:created_at]}
+          td #{posting[:owner_name]}
+          td #{posting[:content]}
+          td #{posting[:created_at]}
 
-
+div class="modal fade" id="newPostingModal" role="dialog"
+  div class="modal-dialog"
+    div class="modal-content"
+      div class="modal-header"
+        h4 class="modal-title" New Posting
+      div class="modal-body"
+        form class="form-horizontal"
+          fieldset
+            div class="form-group"
+              label for="textArea" class="col-sm-2 control-label" style="margin-bottom: 5px" Content
+              textarea class="form-control" rows="3" id="textArea"
+      div class="modal-footer"
+        button type="button" class="btn btn-default" data-dismiss="modal" Close
+        button type="button" class="btn btn-primary" Save changes
+      
