--- a/views/nav.slim
+++ b/views/nav.slim
@@ -23,6 +23,8 @@ nav class="navbar navbar-default"
                 a href="/account/#{@current_account['name']}" account
               li
                 a href='/account/logout' logout
+          li 
+            a href="/postings/1/comments/" comments
         - else
           li
             a href='/account/login' login
