--- a/views/postings_all.slim
+++ b/views/postings_all.slim
@@ -22,12 +22,10 @@ div class="modal fade" id="newPostingModal" role="dialog"
       div class="modal-header"
         h4 class="modal-title" New Posting
       div class="modal-body"
-        form class="form-horizontal"
+        form class="form-horizontal" role="form" action="/account/#{@current_account['name']}/posting" method='post'
           fieldset
             div class="form-group"
               label for="textArea" class="col-sm-2 control-label" style="margin-bottom: 5px" Content
-              textarea class="form-control" rows="3" id="textArea"
-      div class="modal-footer"
-        button type="button" class="btn btn-default" data-dismiss="modal" Close
-        button type="button" class="btn btn-primary" Save changes
-      
+              textarea class="form-control" name="content" rows="3" id="textArea"
+            button type='submit' id='registration-form-submit' class='submit' value='submit' class="btn btn-success" Create
+            button type="button" class="btn btn-default" data-dismiss="modal" Cancel
