--- a/views/layout.slim
+++ b/views/layout.slim
@@ -11,6 +11,9 @@ html
 
     / Bootstrap JS
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"
+
+    / My CSS
+    link rel='stylesheet' href='/style.css'
   body
     == slim :nav
     div class='container' id='html_body'
