can get other account's posting by clicking their name in the home page

--- a/views/home.slim
+++ b/views/home.slim
@@ -8,12 +8,16 @@ div class="row"
         tr
           th Owner
           th Content
+          th Comments
           th Created At
       tbody
         - @postings.each do |posting|
           tr
-            td #{posting[:owner_name]}
+            td 
+              a href="/other_account/#{posting[:owner_name]}/postings/#{posting[:owner_id]}/" #{posting[:owner_name]}
             td class="ellipsis" #{posting[:content]}
+            td 
+              a href='#' class="btn btn-success btn-xs" See comments
             td #{posting[:created_at]}
   - else
     p
