create comment for posting done

--- a/views/home.slim
+++ b/views/home.slim
@@ -1,3 +1,4 @@
+div class="page-header" id="banner"
 div class="row"
   h1 Welcome to Totodile
   p class="text-success" This site allows you anonymously to create posting .
