--- a/views/register.slim
+++ b/views/register.slim
@@ -1,3 +1,4 @@
+div class="page-header" id="banner"
 h2 Create An Account
 form action='/account/register' method='post' id='user-form'
   label for='name' Username:
