--- a/views/postings_all.slim
+++ b/views/postings_all.slim
@@ -1,3 +1,4 @@
+div class="page-header" id="banner"
 div class="row" style="margin-bottom: 10px"
   h3 All postings
 div class="row" style="margin-bottom: 10px"
