login ,register, confirm page done

--- a/views/comments.slim
+++ b/views/comments.slim
@@ -1,4 +1,3 @@
-div class="page-header" id="banner"
 div class="jumbotron row" style="margin-bottom: 10px"
   h1 #{@posting_with_comments[:owner_name]}'s posting
   p style="word-break:break-all" #{@posting_with_comments[:content]}
@@ -21,5 +20,5 @@ div class="modal fade" id="newCommentModal" role="dialog"
             div class="form-group"
               label for="textArea" class="col-sm-2 control-label" style="margin-bottom: 5px" Content
               textarea class="form-control" name="content" rows="3" id="textArea"
-            button type='submit' id='registration-form-submit' class='submit' value='submit' class="btn btn-primary" Create
+            button type='submit' id='registration-form-submit' class='submit' value='submit' class="btn btn-primary" style="margin-right: 5px"Create
             button type="button" class="btn btn-default" data-dismiss="modal" Cancel
