--- a/views/layout.slim
+++ b/views/layout.slim
@@ -17,6 +17,7 @@ html
   body
     == slim :nav
     div class='container' id='html_body'
+      div class="page-header" id="banner"
       section
         == slim :flash_bar
         == yield
