--- a/views/postings_all.slim
+++ b/views/postings_all.slim
@@ -1,4 +1,3 @@
-div class="page-header" id="banner"
 div class="row" style="margin-bottom: 10px"
   h3 All postings
 div class="row" style="margin-bottom: 10px"
@@ -31,5 +30,5 @@ div class="modal fade" id="newPostingModal" role="dialog"
             div class="form-group"
               label for="textArea" class="col-sm-2 control-label" style="margin-bottom: 5px" Content
               textarea class="form-control" name="content" rows="3" id="textArea"
-            button type='submit' id='registration-form-submit' class='submit' value='submit' class="btn btn-success" Create
+            button type='submit' id='registration-form-submit' class='submit' value='submit' class="btn btn-success" style="margin-right: 5px"Create
             button type="button" class="btn btn-default" data-dismiss="modal" Cancel
