--- a/views/home.slim
+++ b/views/home.slim
@@ -1,39 +1,24 @@
 div class="row"
+  - if @current_account
+    h1 Hi, #{@current_account['name']}.
   h1 Welcome to Totodile
   p class="text-success" This site allows you anonymously to create posting .
+  - if !@current_account
+    p class="text-success" Please login to post and leave comment.
 div class="row"
-  - if @current_account
-    table class="table table-striped table-hover "
-      thead
+  table class="table table-striped table-hover "
+    thead
+      tr
+        th Owner
+        th Content
+        th Comments
+        th Created At
+    tbody
+      - @postings.each do |posting|
         tr
-          th Owner
-          th Content
-          th Comments
-          th Created At
-      tbody
-        - @postings.each do |posting|
-          tr
-            td 
-              a href="/other_account/#{posting[:owner_name]}/postings/#{posting[:owner_id]}/" #{posting[:owner_name]}
-            td class="ellipsis" #{posting[:content]}
-            td 
-              a href='/postings/#{posting[:id]}/comments/' class="btn btn-success btn-xs" See comments
-            td #{posting[:created_at]}
-  - else
-    h1 Not login yet
-    table class="table table-striped table-hover "
-      thead
-        tr
-          th Owner
-          th Content
-          th Comments
-          th Created At
-      tbody
-        - @postings_test.each do |posting|
-          tr
-            td 
-              a href="/other_account/#{posting[:owner_name]}/postings/#{posting[:owner_id]}/" #{posting[:owner_name]}
-            td class="ellipsis" #{posting[:content]}
-            td 
-              a href='/postings/#{posting[:id]}/comments/' class="btn btn-success btn-xs" See comments
-            td #{posting[:created_at]}
+          td 
+            a href="/other_account/#{posting[:owner_name]}/postings/#{posting[:owner_id]}/" #{posting[:owner_name]}
+          td class="ellipsis" #{posting[:content]}
+          td 
+            a href='/postings/#{posting[:id]}/comments/' class="btn btn-success btn-xs" See comments
+          td #{posting[:created_at]}
