--- a/views/postings_all.slim
+++ b/views/postings_all.slim
@@ -1,7 +1,8 @@
 div class="row" style="margin-bottom: 10px"
   h3 All postings
 div class="row" style="margin-bottom: 10px"
-  button type="button" class="btn btn-success" data-toggle="modal" data-target="#newPostingModal" + New Posting
+  - if @current_account
+    button type="button" class="btn btn-success" data-toggle="modal" data-target="#newPostingModal" + New Posting
 div class="row"
   table class="table table-striped table-hover "
     thead
@@ -19,16 +20,17 @@ div class="row"
             a href='/postings/#{posting[:id]}/comments/' class="btn btn-success btn-xs" See comments
           td #{posting[:created_at]}
 
-div class="modal fade" id="newPostingModal" role="dialog"
-  div class="modal-dialog"
-    div class="modal-content"
-      div class="modal-header"
-        h4 class="modal-title" New Posting
-      div class="modal-body"
-        form class="form-horizontal" role="form" action="/account/#{@current_account['name']}/posting" method='post'
-          fieldset
-            div class="form-group"
-              label for="textArea" class="col-sm-2 control-label" style="margin-bottom: 5px" Content
-              textarea class="form-control" name="content" rows="3" id="textArea"
-            button type='submit' id='registration-form-submit' class='submit' value='submit' class="btn btn-success" style="margin-right: 5px"Create
-            button type="button" class="btn btn-default" data-dismiss="modal" Cancel
+- if @current_account
+  div class="modal fade" id="newPostingModal" role="dialog"
+    div class="modal-dialog"
+      div class="modal-content"
+        div class="modal-header"
+          h4 class="modal-title" New Posting
+        div class="modal-body"
+          form class="form-horizontal" role="form" action="/account/#{@current_account['name']}/posting" method='post'
+            fieldset
+              div class="form-group"
+                label for="textArea" class="col-sm-2 control-label" style="margin-bottom: 5px" Content
+                textarea class="form-control" name="content" rows="3" id="textArea"
+              button type='submit' id='registration-form-submit' class='submit' value='submit' class="btn btn-success" style="margin-right: 5px"Create
+              button type="button" class="btn btn-default" data-dismiss="modal" Cancel
